Checked and revised

--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
     document.getElementById("search-query").addEventListener("input", function() {
         component.searchQuery = this.value;
     });
-    component.isTable = true;
+    component.isTable = false;
     component.isAsc = false;
     component.dataPerPage = 6;
     component.allData = [
